Fix Horizontal Overflow issue

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -254,6 +254,7 @@ body {
   font-family: "AR", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.5rem;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 ::-moz-selection {
